# 2d-sim

./: i1  input  iteration-1  iteration-1.cpp
visualizador/: .~lock.Report.odt#  CMakeCache.txt  CMakeLists.txt  Makefile  RODATUDO.PY  Report.odt  body.h  cmake_install.cmake  create_input.py  input  main.cpp  visualizador  visualizador.cpp  visualizador.h
visualizador/results/: -s=best -gui=2 -model=0 -n_balls=12100.csv  -s=best -gui=2 -model=0 -n_balls=2500.csv  -s=best -gui=2 -model=0 -n_balls=4900.csv  -s=best -gui=2 -model=0 -n_balls=8100.csv  -s=omp -gui=2 -model=0 -n_balls=12100.csv  -s=omp -gui=2 -model=0 -n_balls=2500.csv  -s=omp -gui=2 -model=0 -n_balls=4900.csv  -s=omp -gui=2 -model=0 -n_balls=8100.csv  -s=seq -gui=2 -model=0 -n_balls=12100.csv  -s=seq -gui=2 -model=0 -n_balls=2500.csv  -s=seq -gui=2 -model=0 -n_balls=4900.csv  -s=seq -gui=2 -model=0 -n_balls=8100.csv  -s=simd -gui=2 -model=0 -n_balls=12100.csv  -s=simd -gui=2 -model=0 -n_balls=2500.csv  -s=simd -gui=2 -model=0 -n_balls=4900.csv  -s=simd -gui=2 -model=0 -n_balls=8100.csv
